--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
     <header>
         <nav>
-            <a href="" id="LogoHeader"><img src="assets/logo-header.png" alt="Logo header"></a>
             <ul>
+                <a href="" id="LogoHeader"><img src="assets/logo-header.png" alt="Logo header"></a>
                 <li>
-                    <a href="" class="navigation">Accueil</a>
+                    <a href="" class="navigation" id="navposition">Accueil</a>
                 </li>
                 <li>
                     <a href="" class="navigation">Line up</a>
@@ -31,97 +31,103 @@
                     <a href="" class="navigation">Calendrier</a>
                 </li>
                 <li>
-                    <a href="" class="navigation">à Propos</a>
+                    <a href="" class="navigation" id="marginright">à Propos</a>
                 </li>
             </ul>
         </nav>
         <section>
-            <div>
+            <div class="container">
                 <h1>urban night <span><br>rap fest <br></span></h1>
-                <h2>04 MAI & 05 MAI <br>LYON - PARC DE GERLAND <br> 7EME</h2>
-                <div>
-                    <a href="">BILLETERIE</a>
-                    <a href="">PLUS D'INFO</a>
+                <h2  id="headerh2"><strong>04 MAI & 05 MAI</strong><br>LYON - PARC DE GERLAND <br> 7EME</h2>
+                <div id="divbutton">
+                    <a href="" class="header_buttons">BILLETERIE</a>
+                    <a href="" class="header_buttons" id="header_buttons2">PLUS D'INFO</a>
                 </div>
             </div>
         </section>
     </header>
     <main>
         <section>
-            <h2>Plongez au cœur
-                du rythme urbain
-                avec RAPture, le
-                festival de rap qui
-                célèbre la
-                puissance des
-                mots, des beats et
-                des cultures qui
-                les inspirent.</h2>
-            <p>Du 4 au 5 mai, vibrez au son des
-                artistes les plus bouillants de la scène
-                rap, entre performances live, freestyles
-                enflammés et rencontres inédites. 
-                RAPture, c’est plus qu’un festival, c’est
-                une immersion dans l’essence du hiphop : des flows tranchants, des basses
-                profondes et une énergie brute qui
-                réunit toutes les générations. 
-                Sur scène, les talents montants
-                côtoient les légendes, pour un weekend où chaque rime fait écho aux
-                histoires de la rue, des rêves et de la
-                liberté d’expression. 
-                Venez vivre trois jours de pure
-                intensité, là où la musique, la vibe et la
-                culture rap ne font plus qu’un.</p>
-            <section>
-            </section>
-            <section>
-                <h2>LINE UP</h2>
-                <ul>
-                    <li>04 MAI - OMAH LAY</li>
-                    <li>04 MAI - WIZKID</li>
-                    <li>04 MAI - LIL BABY</li>
-                    <li>04 MAI - BURNA BOY</li>
-                    <li>05 MAI - KPOINT</li>
-                    <li>05 MAI - A.C</li>
-                    <li>05 MAI - KEKRA</li>
-                    <li>05 MAI - THEODORA</li>
-                </ul>
-                <a href="">BILLETERIE</a>
-            </section>
-            <section class="logos">
+            <div class="container">
+                <h2>Plongez au cœur
+                    du rythme urbain
+                    avec RAPture, le
+                    festival de rap qui
+                    célèbre la
+                    puissance des
+                    mots, des beats et
+                    des cultures qui
+                    les inspirent.</h2>
+                <p>Du 4 au 5 mai, vibrez au son des
+                    artistes les plus bouillants de la scène
+                    rap, entre performances live, freestyles
+                    enflammés et rencontres inédites. 
+                    RAPture, c’est plus qu’un festival, c’est
+                    une immersion dans l’essence du hiphop : des flows tranchants, des basses
+                    profondes et une énergie brute qui
+                    réunit toutes les générations. 
+                    Sur scène, les talents montants
+                    côtoient les légendes, pour un weekend où chaque rime fait écho aux
+                    histoires de la rue, des rêves et de la
+                    liberté d’expression. 
+                    Venez vivre trois jours de pure
+                    intensité, là où la musique, la vibe et la
+                    culture rap ne font plus qu’un.</p>
+            </div>
+        </section>
+        <section>
+            <img id="img" src="assets/section-img.png" alt="">
+        </section>
+        <section>
+            <h2>LINE UP</h2>
+            <ul>
+                <li>04 MAI - OMAH LAY</li>
+                <li>04 MAI - WIZKID</li>
+                <li>04 MAI - LIL BABY</li>
+                <li>04 MAI - BURNA BOY</li>
+                <li>05 MAI - KPOINT</li>
+                <li>05 MAI - A.C</li>
+                <li>05 MAI - KEKRA</li>
+                <li>05 MAI - THEODORA</li>
+            </ul>
+            <a href="">BILLETERIE</a>
+        </section>
+        <section class="logos">
+            <div>
                 <img src="assets/spotify.png" alt="">
                 <img src="assets/applemusic.png" alt="">
                 <img src="assets/uber.png" alt="">
                 <img src="assets/deezer.png" alt="">
                 <img src="assets/motorola.png" alt="">
-            </section>
-            <section>
-                <h2>CONTACTEZ NOUS</h2>
-                <p>Fill out the booking form below to ask any questions, or reach out to us directly at
-                    help@raptureclouds.com with any questions or concerns.</p>
-                <form action="">
-                    <div>
-                        <label for="">Full Name</label>
-                        <input type="Full Name" placeholder="Full Name">
-                    </div>
-                    <div>
-                        <label for="">Email</label>
-                        <input type="Email" placeholder="Email">
-                    </div>
-                    <div>
-                        <label for="">Phone</label>
-                        <input type="Phone" placeholder="Phone">
-                    </div>
-                    <div>
-                        <label for="">Message</label>
-                        <input type="Message" placeholder="Message">
-                    </div>
-                    <button>
-                        <a href="">CONTACT</a>
-                    </button>
-                </form>
-            </section>
+            </div>
         </section>
+        <section>
+            <h2>CONTACTEZ NOUS</h2>
+            <p>Fill out the booking form below to ask any questions, or reach out to us directly at
+                help@raptureclouds.com with any questions or concerns.</p>
+            <form action="">
+                <div>
+                    <label for="">Full Name</label>
+                    <input type="Full Name" placeholder="Full Name">
+                </div>
+                <div>
+                    <label for="">Email</label>
+                    <input type="Email" placeholder="Email">
+                </div>
+                <div>
+                    <label for="">Phone</label>
+                    <input type="Phone" placeholder="Phone">
+                </div>
+                <div>
+                    <label for="">Message</label>
+                    <input type="Message" placeholder="Message">
+                </div>
+                <button>
+                    <a href="">CONTACT</a>
+                </button>
+            </form>
+        </section>
+
     </main>
     <footer>
         <div>
